<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light"
    tools:context=".ui.dashboard.DashboardFragment">

    <TextView
        android:id="@+id/textView"
        android:layout_width="349dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="22dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="22dp"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/alataregular"
        android:text="@string/guess_the_palindrome"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#6626DD"
        android:textSize="34sp"
        android:textStyle="bold"
        android:typeface="normal"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/guessButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="152dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="153dp"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/alataregular"
        android:text="@string/guess"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toTopOf="@+id/nextButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/answer" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="167dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="189dp"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/alataregular"
        android:text="@string/hints"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/wordLength"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/wordLength"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="167dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="170dp"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/alataregular"
        android:text="@string/_7_letters"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/someLetters"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/someLetters"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="167dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="175dp"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/alataregular"
        android:text="@string/has_t_c"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/answer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/wordLength" />

    <EditText
        android:id="@+id/enterWord"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="91dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="91dp"
        android:layout_marginBottom="200dp"
        android:autofillHints=""
        android:ems="10"
        android:fontFamily="@font/alataregular"
        android:hint="@string/enter_a_word"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColorHint="#78909C"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nextButton" />

    <Button
        android:id="@+id/nextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="152dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="153dp"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/alataregular"
        android:text="@string/next"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toTopOf="@+id/enterWord"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guessButton" />

    <TextView
        android:id="@+id/answer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="167dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="167dp"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/alataregular"
        android:text="@string/waiting"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/guessButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/someLetters" />
</androidx.constraintlayout.widget.ConstraintLayout>